--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <center><h2> Sistema de Gestion y Control Agronomia UMSA</h2></center>
 	<title>Prueba sensor</title>
   <!--Agregando librerias -->
+  <!--Jquery, arest,script-->
 	<script type="text/javascript" src="./js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="./js/ajaxq.js"></script>
 	<script type="text/javascript" src="./js/arest.js"></script>
@@ -14,13 +15,14 @@
 </head>
 
 <body>
-	<div>
+  
+  <!--	<div>-->
 		<!-- Asignando un campo para la IP-->
-		<input id='device_address' type="text" name="fname">
+	<!--	<input id='device_address' type="text" name="fname">-->
 		<!-- Agregando un Boton para validar la IP-->
-		<button id='validate' type="button">Validar Pin</button>
-	</div>
-
+	<!--	<button id='validate' type="button">Validar Pin</button>
+	</div>-->
+<button id="IP" type="button"> Encender Sistema </button>
 	<div>Digital pin 8: </div>
 
 	<div>
