Asigne IP al archivo script.js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 		<!-- Asignando un campo para la IP-->
 	<!--	<input id='device_address' type="text" name="fname">-->
 		<!-- Agregando un Boton para validar la IP-->
-	<!--	<button id='validate' type="button">Validar Pin</button>
-	</div>-->
-<button id="IP" type="button"> Encender Sistema </button>
+	<button id='validate' type="button">Validar Pin</button>
+	<!--</div>-->
 	<div>Digital pin 8: </div>
 
 	<div>
