--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div>Digital pin 8: </div>
 
 	<div>
-		<button id='on' type="button">On</button>
+		<button class="boton" id='on' type="button">On</button>
 	</div>
 
 	<div>
